<resources>
  <string name="app_name">New Mexico Medical Cannabis</string>


  <!--textView-->
  <string name="text_create_account">No account yet? Create one</string>
  <string name="text_patient_id_card">Patient Identification Card</string>
  <string name="text_card_id_number">Card ID Number:</string>
  <string name="text_issue_date">Issue Date:</string>
  <string name="text_exp_date">Expiration Date:</string>
  <string name="text_units_available">Units Available:</string>
  <string name="text_dispensary_name">Dispensary:</string>
  <string name="text_strain_name">Strain:</string>
  <string name="text_new_transaction">Transactions</string>
  <string name="text_grams">Grams:</string>
  <string name="text_cannabis_flower">Flower:</string>


  <!--editText-->
  <string name="edit_enter_card_number">Enter Card Number</string>
  <string name="edit_enter_issue_date">Enter Card Issue Date</string>
  <string name="edit_enter_exp_date">Enter Card Exp Date</string>
  <string name="edit_enter_email">Email</string>
  <string name="edit_enter_password">Password</string>

  <!--buttonText-->
  <string name="button_save">Save</string>
  <string name="button_login">Login</string>
  <string name="cancel_button">Cancel</string>
  <string name="create_button">Create</string>

  <!--menuSettings-->
  <string name="menu_settings">Settings</string>
  <string name="menu_about">About</string>

  <!--menuMain-->
  <string name="menu_patient_card_info">Card Information</string>
  <string name="title_activity_nav_menu">nav_menu</string>

  <!--navigationDrawer-->
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="checkbox">Check</string>

  <!--newTransactionDialog-->
  <string name="autocomplete_dispensary">Enter Dispensary</string>
  <string name="autocomplete_Strain">Strain Name</string>
  <string name="editGramsNumber">Grams</string>
  <string name="button_save_new_transaction">Save</string>
  <string name="purchase_date">Purchase Date:</string>
  <string name="purchased_date_dialog">Date</string>


  <string-array name="product_type_array">
    <item>Flower</item>
    <item>Concentrate</item>
    <item>Edible</item>
  </string-array>


</resources>
