<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/patient_card_info_page"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="edu.cnm.deepdive.nmmedicalcannabis.fragments.PatientCardInfoPage">



  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/text_patient_id_card"
    android:textAlignment="center"
    android:textColor="@color/colorText"
    android:textSize="24sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintHorizontal_bias="0.504"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline"/>
  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:text="@string/text_card_id_number"
    android:textColor="@color/colorText"
    android:textSize="18sp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/editText2"
    app:layout_constraintTop_toTopOf="@+id/guideline"/>
  <EditText
    android:id="@+id/editText2"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="@string/edit_enter_card_number"
    android:inputType="number"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
    app:layout_constraintRight_toRightOf="parent"
    tools:layout_editor_absoluteX="162dp"
    tools:layout_editor_absoluteY="81dp"/>
  <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline"
    app:layout_constraintGuide_begin="110dp"
    android:orientation="horizontal"/>
  <TextView
    android:id="@+id/textView5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="16dp"
    android:text="@string/text_issue_date"
    android:textAlignment="viewStart"
    android:textColor="@color/colorText"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textView4"
    app:layout_constraintRight_toLeftOf="@+id/editText5"
    app:layout_constraintTop_toBottomOf="@+id/textView4"/>
  <EditText
    android:id="@+id/editText5"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="@string/edit_enter_issue_date"
    android:inputType="date"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
    app:layout_constraintRight_toRightOf="parent"/>
  <EditText
    android:id="@+id/editText6"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="@string/edit_enter_exp_date"
    android:inputType="date"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
    app:layout_constraintRight_toRightOf="parent"/>
  <TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="0dp"
    android:text="@string/text_exp_date"
    android:textAlignment="viewStart"
    android:textColor="@color/colorText"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textView5"
    app:layout_constraintTop_toBottomOf="@+id/textView5"/>
  <TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="0dp"
    android:text="@string/text_units_available"
    android:textColor="@color/colorText"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textView6"
    app:layout_constraintTop_toBottomOf="@+id/textView6"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline2"
    app:layout_constraintVertical_bias="0.0"/>
  <EditText
    android:id="@+id/editText7"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="Starting Units"
    android:inputType="number"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
    app:layout_constraintRight_toRightOf="parent"/>
  <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline2"
    app:layout_constraintGuide_begin="303dp"
    android:orientation="horizontal"/>
  <Button
    android:id="@+id/button_save"
    android:layout_width="127dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/button_save"
    app:layout_constraintHorizontal_bias="0.501"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline2"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline3"/>
  <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline3"
    app:layout_constraintGuide_begin="371dp"
    android:orientation="horizontal"/>
</android.support.constraint.ConstraintLayout>
