<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/new_transactions_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="edu.cnm.deepdive.nmmedicalcannabis.fragments.TransactionsPage">


  <!--New TransactionDatabase Text-->
  <TextView
    android:id="@+id/textTransactions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_new_transaction"
    android:textAlignment="center"
    android:textColor="@color/colorTextDark"
    android:textSize="24sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="0.504"
    android:layout_marginBottom="3dp"
    android:layout_marginTop="3dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline4"
    app:layout_constraintTop_toTopOf="parent"/>

  <!--Dispensary text-->
  <TextView
    android:id="@+id/textDispensary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:text="@string/text_dispensary_name"
    android:textColor="@color/colorTextDark"
    android:textSize="18sp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline4"
    app:layout_constraintRight_toLeftOf="@+id/autoCompleteDispensary"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"/>

  <!--Flower text-->
  <TextView
    android:id="@+id/textFlower"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/text_cannabis_flower"
    android:textAlignment="viewStart"
    android:textAllCaps="false"
    android:textColor="@color/colorTextDark"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textDispensary"
    app:layout_constraintTop_toBottomOf="@+id/textDispensary"
    app:layout_constraintRight_toLeftOf="@+id/checkboxFlower"
    android:layout_marginEnd="16dp"/>

  <!--Strain text-->
  <TextView
    android:id="@+id/textStrain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/text_strain_name"
    android:textColor="@color/colorTextDark"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textFlower"
    app:layout_constraintTop_toBottomOf="@+id/textFlower"/>

  <!--Grams text-->
  <TextView
    android:id="@+id/textGrams"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="sans-serif"
    android:text="@string/text_grams"
    android:textColor="@color/colorTextDark"
    android:textSize="18sp"
    app:layout_constraintLeft_toLeftOf="@+id/textStrain"
    app:layout_constraintTop_toBottomOf="@+id/textStrain"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline5"
    app:layout_constraintVertical_bias="0.0"/>

  <!--Dispensary autocomplete text-->
  <AutoCompleteTextView
    android:id="@+id/autoCompleteDispensary"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:completionHint="@string/autocomplete_dispensary"
    android:contentDescription="@string/autocomplete_dispensary"
    android:ems="10"
    android:hint="@string/autocomplete_dispensary"
    android:popupBackground="@color/colorPrimary"
    android:textSize="18sp"
    app:layout_constraintBaseline_toBaselineOf="@+id/textDispensary"
    app:layout_constraintRight_toRightOf="parent"
    tools:text="@string/autocomplete_dispensary"
    android:layout_marginEnd="16dp"/>

  <!--Flower checkbox-->
  <CheckBox
    android:id="@+id/checkboxFlower"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:text="@string/checkbox"
    android:textSize="18sp"
    app:layout_constraintBaseline_toBaselineOf="@+id/textFlower"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginEnd="16dp"/>

  <!--Strain autocomplete text-->
  <AutoCompleteTextView
    android:id="@+id/autoCompleteStrain"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:completionHint="@string/autocomplete_Strain"
    android:contentDescription="@string/autocomplete_Strain"
    android:ems="10"
    android:hint="@string/autocomplete_Strain"
    app:layout_constraintBaseline_toBaselineOf="@+id/textStrain"
    app:layout_constraintRight_toRightOf="parent"
    tools:text="@string/autocomplete_Strain"
    android:layout_marginEnd="16dp"/>

  <!--Number edit text-->
  <EditText
    android:id="@+id/editGramsNumber"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:contentDescription="@string/editGramsNumber"
    android:ems="10"
    android:hint="@string/editGramsNumber"
    android:inputType="numberDecimal"
    app:layout_constraintBaseline_toBaselineOf="@+id/textGrams"
    app:layout_constraintRight_toRightOf="parent"
    tools:text="@string/editGramsNumber"
    android:layout_marginEnd="16dp"/>

  <!--Top guideline-->
  <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline4"
    app:layout_constraintGuide_begin="100dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="100dp"
    tools:layout_editor_absoluteX="0dp"/>

  <!--Middle guideline-->
  <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline5"
    app:layout_constraintGuide_begin="303dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="303dp"
    tools:layout_editor_absoluteX="0dp"/>

  <Spinner
    android:id="@+id/typeSpinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="0.047"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline4"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@+id/textTransactions"/>




</android.support.constraint.ConstraintLayout>
