<android.support.constraint.ConstraintLayout
  android:id="@+id/login_page"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="edu.cnm.deepdive.nmmedicalcannabis.fragments.LoginPage">

  <!-- TODO: Update blank fragment layout -->

  <ImageButton
    android:id="@+id/imageButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@mipmap/ic_launcher_round"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="100dp"/>
  <EditText
    android:id="@+id/editEmailAddress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:hint="@string/edit_enter_email"
    android:inputType="textEmailAddress"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageButton"/>
  <EditText
    android:id="@+id/editPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="0dp"
    android:ems="10"
    android:hint="@string/edit_enter_password"
    android:inputType="textPassword"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editEmailAddress"/>
  <Button
    android:id="@+id/buttonLogin"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="23dp"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:onClick="login"
    android:text="@string/button_login"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editPassword"/>
  <TextView
    android:id="@+id/textCreateAccount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="130dp"
    android:text="@string/text_create_account"
    android:textAlignment="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"/>


</android.support.constraint.ConstraintLayout>
