<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/fragment_transactions_page"
  tools:context="edu.cnm.deepdive.nmmedicalcannabis.fragments.TransactionsPage">

  <TextView
    android:id="@+id/textDispensary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:text="@string/text_dispensary_name"
    android:textColor="@color/colorTextDark"
    android:textSize="24sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline5"
    android:layout_marginRight="8dp"
    app:layout_constraintRight_toRightOf="parent"/>
  <TextView
    android:id="@+id/textStrain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="8dp"
    android:text="@string/text_strain_name"
    android:textColor="@color/colorTextDark"
    android:textSize="15sp"
    app:layout_constraintLeft_toLeftOf="@+id/textDispensary"
    app:layout_constraintTop_toBottomOf="@+id/textView2"/>
  <TextView
    android:id="@+id/textUnitsGrams"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="32dp"
    android:text="@string/text_units_grams"
    android:textColor="@color/colorTextDark"
    android:textSize="15sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textStrain"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline6"/>
  <TextView
    android:id="@+id/textTransactions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/text_new_transaction"
    android:textAlignment="center"
    android:textColor="@color/colorTextDark"
    android:textSize="24sp"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline5"/>

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="serif"
    android:text="@string/text_cannabis_flower"
    android:textAlignment="textStart"
    android:textAllCaps="false"
    android:textColor="@color/colorTextDark"
    android:textSize="18sp"
    android:layout_marginLeft="8dp"
    app:layout_constraintLeft_toLeftOf="@+id/textDispensary"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@+id/textDispensary"/>
  <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline5"
    app:layout_constraintGuide_begin="76dp"
    android:orientation="horizontal"/>
  <android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline6"
    app:layout_constraintGuide_begin="268dp"
    android:orientation="horizontal"/>
</android.support.constraint.ConstraintLayout>
